tests/derive_arc/fails/receiver_mut.rs
extern crate blanket;

use blanket::blanket;

#[blanket(derive(Arc))]
pub trait Counter {
    fn increment(&mut self);
}

fn main() {}
